Inicia implementacao do create de fraud_report
Co-authored-by: ana-borowsky <anavonborowsky@gmail.com>

--- a/app/views/fraud_reports/new.html.erb
+++ b/app/views/fraud_reports/new.html.erb
@@ -1,5 +1,6 @@
 <article>
   <main> 
+    <h2><%= t 'messages.new_report' %></h2>
     <%= form_with model: @fraud_report do |f| %>
       <p>
         <%= f.label :registration_number %>
