--- a/app/views/admins/_admins_nav.html.erb
+++ b/app/views/admins/_admins_nav.html.erb
@@ -1,29 +1,18 @@
-<header class="p-3 mb-3 border-bottom bg-secondary" id="header">
-  <nav>
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-lg-start">
-        <%= link_to root_path, class:"d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none link-#{controller_name == 'home' ? 'primary' : 'gray'}" do %>
-          <span class="fs-5"> <%= t 'app_name' %>  </span>
-        <% end %>
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
-          <li>
-            <%= link_to "Meios de Pagamento", payment_methods_url , class:"nav-link px-2 link-#{controller_name == 'payment_methods' ? 'primary' : 'gray'}" %>
-          </li>
-          <li>
-            <%= link_to "Usuários", users_path, class:"nav-link px-2 link-#{controller_name == 'users' ? 'primary' : 'gray'}" %>
-          </li>
-        </ul>
-        <span class="nav-link text-secondary-light px-2", style="margin-right: 3%;"> <%= user_greetings(current_admin) %> </span>
-        <div class="dropdown text-end">
-          <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://img.freepik.com/premium-vector/person-avatar-design_24877-38130.jpg?w=2000" alt="mdo" width="32" height="32" class="rounded-circle">
-          </a>
-          <ul class="dropdown-menu text-small">
-            <%= button_to 'Logout', destroy_admin_session_path, method: 'delete', class: "dropdown-item"%>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
-</header>
+<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
+  <li>
+    <%= link_to "Meios de Pagamento", payment_methods_url , class: bootstrap_link('payment_methods') %>
+  </li>
+  <li>
+    <%= link_to "Usuários", users_path, class: bootstrap_link('users') %>
+  </li>
+</ul>
+<span class="nav-link text-secondary-light px-2", style="margin-right: 3%;"> <%= user_greetings(current_admin) %> </span>
+<div class="dropdown text-end">
+  <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    <img src="https://img.freepik.com/premium-vector/person-avatar-design_24877-38130.jpg?w=2000" alt="mdo" width="32" height="32" class="rounded-circle">
+  </a>
+  <ul class="dropdown-menu text-small">
+    <%= button_to 'Logout', destroy_admin_session_path, method: 'delete', class: "dropdown-item"%>
+  </ul>
+</div>
 
