--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,24 @@
   </head>
 
   <body id ='nav'>
-    <% if user_signed_in? %>
-      <%= render 'users/users_nav' %>
-    <% elsif admin_signed_in? %>
-      <%= render 'admins/admins_nav' %>
-    <% else %>
-      <%= render '/visitors_nav' %>
-    <% end %>
+    <header class="p-3 mb-3 border-bottom bg-secondary" id="header">
+      <nav>
+        <div class="container">
+          <div class="d-flex flex-wrap align-items-center justify-content-lg-start">
+            <%= link_to root_path, class:"d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none #{bootstrap_link('home')}" do %>
+              <span class="fs-5"> <%= t 'app_name' %>  </span>
+            <% end %>
+            <% if user_signed_in? %>
+              <%= render 'users/users_nav' %>
+            <% elsif admin_signed_in? %>
+              <%= render 'admins/admins_nav' %>
+            <% else %>
+              <%= render '/visitors_nav' %>
+            <% end %>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
       <% if notice %>
         <p class="alert alert-success"> <%= notice %> </p>
