Adicionada paginacao nas telas que possuem listagem de recursos

--- a/app/views/company_payment_options/index.html.erb
+++ b/app/views/company_payment_options/index.html.erb
@@ -29,4 +29,7 @@
       <%= t 'messages.no_payment_options'  %>
     <% end %>
   </main>
+  <footer>
+    <%= render 'pagination', pagination: @pagination %>
+  </footer>
 </article>
