--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -24,6 +24,8 @@
         </table>
       <% end %>
     </div>  
-
   </main>
+  <footer>
+    <%= render 'pagination', pagination: @pagination %>
+  </footer>
 </article>
