--- a/app/views/payment_methods/index.html.erb
+++ b/app/views/payment_methods/index.html.erb
@@ -28,4 +28,7 @@
   <h3>Não existem meios de pagamento cadastrados.</h3>
   </main>
 <% end %>
+  <footer>
+    <%= render 'pagination', pagination: @pagination %>
+  </footer>
 </article>
