--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,6 +25,8 @@
       <% end %>
     </table>
   <% end %>
-
   </main>
+  <footer>
+    <%= render 'pagination', pagination: @pagination %>
+  </footer>
 </article>
