--- a/app/views/invoices/_pagination.html.erb
+++ b/app/views/invoices/_pagination.html.erb
@@ -13,7 +13,7 @@
          <span style="padding-right: 20px"><%= "Página #{pagination.page} de #{pagination.total_pages}" %> </span>
         <% if pagination.next_page? %>
           <%= link_to t('buttons.next'), invoices_path(page: pagination.next_page ), style: 'padding-right: 20px'  %>
-          <%= link_to t('buttons.next'), invoices_path(page: pagination.total_pages ), style: 'padding-right: 20px' %>
+          <%= link_to t('buttons.last'), invoices_path(page: pagination.total_pages ), style: 'padding-right: 20px' %>
         <% else %>
           <span style="padding-right: 20px"> <%= t 'buttons.next' %> </span>
           <span style="padding-right: 20px"> <%= t 'buttons.last' %> </span>
