Corrige pequeno bug no bootstrap da paginacao e adiciona na tela de denuncias de fraude

--- a/app/views/fraud_reports/index.html.erb
+++ b/app/views/fraud_reports/index.html.erb
@@ -30,4 +30,7 @@
       <%= t 'messages.no_fraud_reports'  %>
     <% end %>
   </main>
+  <footer>
+    <%= render 'pagination', pagination: @pagination %>
+  </footer>
 </article>
