--- a/app/views/company_payment_options/_pagination.html.erb
+++ b/app/views/company_payment_options/_pagination.html.erb
@@ -1,4 +1,4 @@
-<div class="pagination">
+<div id="pagination">
   <div class="row">
     <div class="col-3"></div>
     <div class="bg-gray" style="padding: 3%; width: 750px; height: 10px; padding: 30px; display: flex; align-items: center; justify-content: center;">
