--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -21,8 +21,8 @@
             <li class="list-group-item"><%= Invoice.human_attribute_name :transaction_registration_number %>: <%= @invoice.transaction_registration_number %> </li>
             <li class="list-group-item"><%= Invoice.human_attribute_name :reason_for_failure %>: <%= @invoice.reason_for_failure %> </li>
             <% if @invoice.pending? %>
-              <p><%= link_to 'Sucesso no Pagamento', edit_invoice_url(status: 'paid'), class: "btn btn-primary btn-m" %></p>
-              <p><%= link_to 'Falha no Pagamento', edit_invoice_url(status: 'failed'), class: "btn btn-primary btn-m" %></p>
+              <p><%= link_to 'Sucesso no Pagamento', edit_invoice_url(status: 'approved'), class: "btn btn-primary btn-m" %></p>
+              <p><%= link_to 'Falha no Pagamento', edit_invoice_url(status: 'refused'), class: "btn btn-primary btn-m" %></p>
             <% end %>
           </ul>
         </div>
