--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -9,11 +9,11 @@
             <li class="list-group-item">
               <h5 class="card-title"><%= Invoice.human_attribute_name :status  %>: <%= t( @invoice.status) %></h5>
             </li>
-            <li class="list-group-item"><%= Invoice.human_attribute_name :insurance_company_id %>: <%= @invoice.insurance_company_id %></li>
-            <li class="list-group-item"><%= Invoice.human_attribute_name :package_id %>: <%= @invoice.package_id %></li>
+            <li class="list-group-item"><%= Invoice.human_attribute_name :insurance_company_id %>: <%= @insurance_company_id %></li>
+            <li class="list-group-item"><%= Invoice.human_attribute_name :package_id %>: <%= @package_id %></li>
             <li class="list-group-item"><%= Invoice.human_attribute_name :registration_number %>: <%= @invoice.registration_number %></li>
             <li class="list-group-item"><%= Invoice.human_attribute_name :order_id %>: <%= @invoice.order_id %></li>
-            <li class="list-group-item"><%= Invoice.human_attribute_name :payment_method_id %>: <%= @invoice.payment_method_id %></li>
+            <li class="list-group-item"><%= Invoice.human_attribute_name :payment_method_id %>: <%= @invoice.payment_method.name %></li>
             <li class="list-group-item"><%= PaymentMethod.human_attribute_name :payment_type %>: <%= @invoice.payment_method.payment_type %></li>
             <li class="list-group-item"><%= Invoice.human_attribute_name :voucher %>: <%= @invoice.voucher %> </li>
             <li class="list-group-item"><%= Invoice.human_attribute_name :parcels %>: <%= @invoice.parcels %> </li>
