--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,26 +1,26 @@
-<h4><%= t 'waiting_for_approval' if current_user&.pending? %></h4>                  
+<h4><%= t 'waiting_for_approval' if current_user&.pending? %></h4>
 <div class="row">
-    
+
 <div class="card col-6 border-0" style="padding: 3%; width: 50%;">
  <div class="position-relative overflow-hidden text-left ">
       <div class="text-center">
-        <%= image_tag("cobrasegurostrans.png", width: 500, height:80) %>
+        <%= image_tag("cobrasegurostrans.png", width: 500, height:80, class: 'mb-3') %>
+
+      <p class="lead font-weight-normal"><strong>Valores COBRA</strong></p>
+      <p><strong>Colaboração</strong> </p>
+      <p><strong>Orientação ao mercado</strong> </p>
+      <p><strong>Brilhantismo</strong></p>
+      <p><strong>Responsabilidade social</strong></p>
+      <p><strong>Autenticidade</strong> </p>
+      <p><strong>Segurança</strong> </p>
       </div>
-      <ul>
-      <p class="lead font-weight-normal"><strong>Somos uma empresa que tem como seu pilar os valores COBRAS:</strong></p>
-      <p><strong>Colaboração:</strong> Parece cliche dizer, mas todes na equipe são realmente uma familia. Temos muita paixão em contribuir para dar sempre os melhores resultados aos nossos clientes.</p>
-      <p><strong>Orientação ao mercado:</strong> Nosso trabalho é fortemente orientado às demandas mais atuais nas areas de segurança em pagamentos, cobramos seus clientes com garra!</p>
-      <p><strong>Brilhantismo:</strong> Estamos sempre investindo na continuidade da formação com excelencia de nossos colaboradores, que estão sempre atualizados com as mais novas tecnologias.</p>
-      <p><strong>Responsabilidade social:</strong> Acreditamos em usar nossa influência para devolver aos outros, por isso investimos em formações voltadas a grupos marginalizados, venha saber mais nas nossas redes sociais!</p>
-      <p><strong>Autenticidade</strong> Somos uma empresa de pessoas e acreditamos que crescemos genuíno sempre parte do aprendizado com a diversidade!</p>
-      <p><strong>Segurança:</strong> O que não podia faltar, é a parte do expertise técnico! Somos um time formado pelas diretizes mais atuais para garantir o sigilo dos seus dados.</p>
-      
+
     <div class="product-device box-shadow d-none d-md-block"></div>
     <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
   </div>
 </div>
 <div class="card  col-6 border-0" style="padding: 3%; width: 50%;">
-  <%= image_tag "logo.png", width: 600, height:500 %>
+  <%= image_tag "/images/home_image.png", width: 600, height:500 %>
 </div>
 </div>
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
