--- a/app/views/company_payment_options/index.html.erb
+++ b/app/views/company_payment_options/index.html.erb
@@ -1,9 +1,9 @@
 <article>
-  <header>
+  <header class="container">
     <h2> <%= CompanyPaymentOption.model_name.human(count: 2) %> </h2>
     <hr>
   </header>
-  <main>
+  <main class="container">
     <% if @payment_options.any? %>
       <table class="table table-striped table-bordered bg-gray">
         <thead>
@@ -28,8 +28,8 @@
     <% end %>
     <br>
     <br>
-    <hr>
     <h2> <%= t 'messages.payment_methods_available' %> </h2>
+    <hr>
     <% if @payment_methods.any? %>
     <table class="table table-striped table-bordered bg-gray">
         <thead>
