--- a/app/views/fraud_reports/index.html.erb
+++ b/app/views/fraud_reports/index.html.erb
@@ -1,13 +1,12 @@
 <article>
-  <header>
+  <header class="container mb-5">
     <h2> <%= FraudReport.model_name.human(count: 2) %> </h2>
     <hr>
     <% if current_user %>
-      <%= link_to t('messages.new_fraud_report'), new_fraud_report_path, class: 'btn btn-primary' %>
-      <hr>
+      <%= link_to t('messages.new_fraud_report'), new_fraud_report_path, class: 'btn btn-primary mb-5' %>
     <% end %>
   </header>
-  <main>
+  <main class="container">
     <% if @fraud_reports.any? %>
       <table class="table table-striped table-bordered bg-gray">
         <thead>
