--- a/app/views/payment_methods/index.html.erb
+++ b/app/views/payment_methods/index.html.erb
@@ -1,11 +1,12 @@
-<h2> Meios de Pagamento </h2>
-<hr>
-<% if current_admin %>
-  <%= link_to 'Cadastrar Novo Meio de Pagamento', new_payment_method_url, class: "btn btn-primary  btn-m" %>
-<% end %>
-<hr>
+<header class="container">
+  <h2> Meios de Pagamento </h2>
+  <hr>
+  <% if current_admin %>
+    <%= link_to 'Cadastrar Novo Meio de Pagamento', new_payment_method_url, class: "btn btn-primary  btn-m mb-5" %>
+  <% end %>
+</header>
 <article>
-  <main style="width:80%">
+  <main style="width:80%" class="container">
     <table class="table table-striped table-bordered bg-gray">
       <thead>
         <tr>
