--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -1,13 +1,12 @@
 <article>
-  <header>
+  <header class="container">
     <h2> Promoções </h2>
     <hr>
     <% if user_signed_in? %>
-      <%= link_to 'Cadastrar promoção', new_promo_path, class: 'btn btn-primary' %>
-      <hr>
+      <%= link_to 'Cadastrar promoção', new_promo_path, class: 'btn btn-primary mb-5' %>
     <% end %>
   </header>
-  <main>
+  <main  class="container">
     <% if @promos.present? %>
         <% @promos.each_slice(3) do |promo| %>
             <div class="row">
@@ -19,7 +18,7 @@
                     </div>
                 </div>
             <% end %>
-            </div> 
+            </div>
         <% end %>
     <% else %>
         <h3>Nenhuma promoção cadastrada</h3>
