--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,16 @@
 <article>
-  <header>
-    <div class='filter'>
+  <header class="container">
+    <h2> <%= t 'users_list' %> </h2>
+    <hr>
+    <div class="filter mb-5">
       <%= form_for '', method: :get do |f| %>
         <%= f.label :filter_option, 'Filtrar usuários', class:'form-label' %>
         <%= f.select :filter_option, @filter_options.values, prompt: true, class:'form-control' %> &nbsp;
         <%= f.submit 'Selecionar', class: 'btn btn-primary', style: 'max-height: 35px;' %>
       <% end %>
     </div>
-    <hr>
   </header>
-  <main>
-    <h3> <%= t 'users_list' %> </h3>
+  <main class="container">
     <% if @users.any? %>
       <table class="table table-striped table-bordered bg-gray">
         <thead>
