--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,14 +28,21 @@
 <hr>
 </div>
 
-<% @insurance_companies_sample.each do |company| %>
-  <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-primary overflow-hidden">
+
+<div>
+  <div class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-primary overflow-hidden">
       <div class="my-3 py-3">
-        <h2 class="display-5"><%= company[:name] %></h2>
-        <p class="lead">And an even wittier subheading.</p>
+        <h2 class="display-5"></h2>
+        <p class="lead">SEGURADORAS PARCEIRAS</p>
       </div>
-    <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><%= company[:logo] %></div>
+      <div class="bg-light box-shadow mx-auto" style="width: 100%; height: 300px; border-radius: 21px 21px 0 0">
+        <div class="container">
+          <% @insurance_companies_sample.each do |company| %>
+            <span class="border-primary"><%= image_tag company[:logo], height: 200 %></span>
+          <% end %>
+        </div>
+      </div>
   </div>
-<% end %>
-<
+</div>
+
+
