--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,37 +3,49 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "users/shared/error_messages", resource: resource %>
     
-    <div class="field">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true%>
-    </div>
+    <p>
+      <div class="field">
+        <%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true, class: "form-control", style: "max-width: 30rem" %>
+      </div>
+    </p>
 
-    <div class="field">
-      <%= f.label :registration_number %><br />
-      <%= f.number_field :registration_number%>
-    </div>
+    <p>
+     <div class="field">
+       <%= f.label :registration_number %><br />
+       <%= f.number_field :registration_number, class: "form-control", style: "max-width: 30rem"%>
+      </div>
+    </p>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autocomplete: "email" %>
-    </div>
+    <p>
+     <div class="field">
+       <%= f.label :email %><br />
+       <%= f.email_field :email, autocomplete: "email", class: "form-control", style: "max-width: 30rem" %>
+     </div>
+    </p>
 
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(no mínimo <%= @minimum_password_length %> caracteres)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
+    <p>
+      <div class="field">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(no mínimo <%= @minimum_password_length %> caracteres)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control", style: "max-width: 30rem" %>
+      </div>
+    </p>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
+    <p>
+     <div class="field">
+       <%= f.label :password_confirmation %><br />
+       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", style: "max-width: 30rem" %>
+     </div>
+    </p>
 
-    <div class="actions">
-      <%= f.submit "Registrar" %>
-    </div>
+    <p>
+      <div class="actions">
+        <%= f.submit "Registrar", class: 'btn btn-primary btn-m' %>
+      </div>
+    </p>
 
   <% end %>
 </div>
