--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <div class="card col-6 border-0" style="padding: 3%; width: 50%;">
  <div class="position-relative overflow-hidden text-left">
       <div class="text-center">
-        <%= image_tag("cobrasegurostrans.png", width: 500, height:80, class: 'mb-5') %>
+        <%= image_tag("cobraseguro.png", width: 500, height:170, class: 'mb-5') %>
         <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
         when an unknown printer took a galley of type and scrambled it to make a type
@@ -13,9 +13,6 @@
         the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
         and more recently with desktop publishing software like Aldus PageMaker
         including versions of Lorem Ipsum.</p>
-        <p class="lead">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
-        in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
-        Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
       </div>
 
     <div class="product-device box-shadow d-none d-md-block"></div>
@@ -25,20 +22,14 @@
 <div class="card  col-6 border-0" style="padding: 3%; width: 50%;">
   <%= image_tag "/images/home_image.png", width: 600, height:500 %>
 </div>
-<hr>
+
+
+<div class="lead text-center text-secondary">  
+  <h2>Conheça algumas de nossas empresas parceiras!</h2>
+  <hr class="mb-5">
+  <% if @insurance_companies_sample.present? %>
+    <% @insurance_companies_sample.each do |company| %>
+      <span class="mr-5" style="margin-right: 2%;"><%= image_tag company[:logo], height: 200, width: 300 %></span>
+    <% end %>
+  <% end %>
 </div>
-
-<% if @insurance_companies_sample.present? %>
-  <div class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-primary overflow-hidden text-center"">
-      <div class="my-3 py-3">
-
-        <p class="lead">And an even wittier subheading.</p>
-      </div>
-      <div class="text-center"">
-      <div class="bg-light box-shadow mx-auto style="width: 100%; height: 300px; border-radius: 1%;">
-        <% @insurance_companies_sample.each do |company| %>
-          <span class="border border-primary"><%= image_tag company[:logo], height: 200 %></span>
-        <% end %>
-      </div>
-  </div>
-<% end %>
