Corrige bug nas opcoes de pagamento da seguradora

--- a/app/views/company_payment_options/show.html.erb
+++ b/app/views/company_payment_options/show.html.erb
@@ -45,11 +45,13 @@
                   <%= link_to t('buttons.edit'), edit_company_payment_option_path(@payment_option), class: "card-link" %>
                 </li>
               </p>
-              <p>
-              <li class="list-group-item"> 
-                  <%= button_to t('buttons.remove'), company_payment_option_url(@payment_option.id), method: :delete, class: "btn btn-primary  btn-m" %>
-              </li>
-              </p>
+              <% if current_user.insurance_company.payment_options.include? @payment_option %>
+                <p>
+                <li class="list-group-item"> 
+                    <%= button_to t('buttons.remove'), company_payment_option_url(@payment_option.id), method: :delete, class: "btn btn-primary  btn-m" %>
+                </li>
+                </p>
+              <% end %>
             </ul>
           </div>
         </div>
