Altera texto da homepage da aplicação
co-authored-by: petragrunheidt <petragrunheidt@gmail.com>
Co-authored-by:  minccia <lusyva.pro@gmail.com>

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,14 +5,15 @@
  <div class="position-relative overflow-hidden text-left">
       <div class="text-center">
         <%= image_tag("cobraseguro.png", width: 500, height:170, class: 'mb-5') %>
-        <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type
-        specimen book. It has survived not only five centuries, but also the leap into
-        electronic typesetting, remaining essentially unchanged. It was popularised in
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-        and more recently with desktop publishing software like Aldus PageMaker
-        including versions of Lorem Ipsu.</p>
+        <p class="lead">Mais que uma empresa de pagamentos e antifraude, fazemos
+        parte de um conjunto de três aplicações
+        <p class="lead">que formam um sistema completo para venda de seguros para equipamentos eletrônicos!</p><br>
+        <p class="lead">Programe promoções, escolha os melhores meios de pagamento para a sua seguradora,</p>
+        <p class="lead">e muito mais! Traga sua seguradora para a CobraSeguro e aproveite agora todas as vantagens que </p>
+        <p class="lead"> só a gente pode te oferecer!</p><br>
+        <p class="lead">A CobraSeguro tem como pilares do seu trabalho a <strong>C</strong>olaboração, a <strong>O</strong>rientação ao mercado,</p>
+        <p class="lead"><strong>B</strong>oas práticas, <strong>R</strong>esponsabilidade social, e <strong>A</strong>utenticidade.</p><br>
+        <p class="lead">Você segura, a gente cobra!</p>
       </div>
 
     <div class="product-device box-shadow d-none d-md-block"></div>
@@ -24,7 +25,7 @@
 </div>
 
 
-<div class="lead text-center text-secondary">  
+<div class="lead text-center text-secondary">
   <h2>Conheça algumas de nossas empresas parceiras!</h2>
   <hr class="mb-5">
   <% if @insurance_companies_sample.present? %>
